# auto-refactorings-clang-tidy-module

./: AutoRefactoringModule.cpp  CMakeLists.txt  CommaInIfChecker.h  IfElseReturnChecker.cpp  IfElseReturnChecker.h  README.md  build.sh  llvm-project.patch  run-clang-format.sh
.github/workflows/: build.yml  common_build.yml
src/: AutoRefactoringModule.cpp  AutoRefactoringModuleUtils.cpp  AutoRefactoringModuleUtils.h  CMakeLists.txt  CallExprInIfChecker.cpp  CallExprInIfChecker.h  CommaInIfChecker.cpp  CommaInIfChecker.h  GoToReturnChecker.cpp  GoToReturnChecker.h  IfElseReturnChecker.cpp  IfElseReturnChecker.h  RenameGhidraMemberVariable.cpp  RenameGhidraMemberVariable.h
tests/: AutoRefactoringModuleTest.cpp  run_tests.sh  test.sh
tests/comma-in-if/in/: simple-if-with-comma.c  simple-if-with-comman
tests/goto-return-checker/basic-tests/: .clang-tidy  input_common_test.c  output_common_test.c
tests/if-call-checker/auto-and-all-call-expr-tests/: .clang-tidy  output_simple_call_in_if_condition.c
tests/if-call-checker/basic-tests/: .clang-tidy  input_composition_call_in_if_condition.c  input_composition_call_in_if_condition_1.c  input_simple_call_in_if_condition.c  input_system_header_call_in_condition.c  input_two_simple_call_in_if_condition.c  output_composition_call_in_if_condition.c  output_composition_call_in_if_condition_1.c  output_simple_call_in_elseif_condition.c  output_simple_call_in_if_condition.c  output_two_simple_call_in_if_condition.c
tests/if-call-checker/callexpr-name-filter-tests/: .clang-tidy  input_simple_call_in_if_condition.c  (+1 more)
(+46 files in other folders)
